Fix column alignment on App

--- a/src/App.css
+++ b/src/App.css
@@ -113,21 +113,21 @@ body {
   @apply 
   row-start-4 row-end-4
   col-start-1 col-end-1
-  lg:col-start-2 lg:col-end-6 lg:row-start-4 lg:row-end-4 
+  lg:col-start-2 lg:col-end-6
     bg-white/90 text-gray-900 rounded-lg p-4;
 }
 
 .weather-updates {
   @apply 
-  row-start-4 row-end-4
+  row-start-5 row-end-5
   col-start-1 col-end-1
-  lg:col-start-6 lg:col-end-8; 
+  lg:col-start-6 lg:col-end-8 lg:row-start-4 lg:row-end-4; 
 }
 
 .traffic-updates {
   @apply
-  row-start-5 row-end-5  
+  row-start-6 row-end-6  
   col-start-1 col-end-1
-  lg:col-start-2 lg:col-end-8 
+  lg:col-start-2 lg:col-end-8 lg:row-start-5 lg:row-end-5 
   w-full h-full;
 }
